room page is done
