# server/routes/room.js
@@ -4,24 +4,27 @@ var router = express.Router()
 var {ensureLoggedIn} = require('../util/ensureAuth')
 
 var { 
-	list, select, create, edit, remove, 
-	//selectMembers, createMembers, removeMembers, selectAnnouncements, createAnnouncements, removeAnnouncements, selectSchedule, createSchedule, removeSchedule 
+	my, list, select, create, edit, remove, 
+	isMember, listMembers, addMember, removeMember, roomExistMiddleware, userIsRoomMemberMiddleware, userIsNotRoomMemberMiddleware, 
+	listAnnouncements, addAnnouncement, removeAnnouncement, userIsRoomOwnerMiddleware, userIsNotRoomOwnerMiddleware, 
+	listSchedules, addSchedule, removeSchedule 
 } = require('../controllers/room')
 
+router.get('/my', my)
 router.get('/list', list)
 router.get('/', select)
 router.post('/', ensureLoggedIn(), create)
 router.put('/', ensureLoggedIn(), edit)
 router.delete('/', ensureLoggedIn(), remove)
-/*
-router.get('/members', selectMembers)
-router.post('/members', ensureLoggedIn(), createMembers)
-router.delete('/members', ensureLoggedIn(), removeMembers)
-router.get('/announcements', selectAnnouncements)
-router.post('/announcements', ensureLoggedIn(), createAnnouncements)
-router.delete('/announcements', ensureLoggedIn(), removeAnnouncements)
-router.get('/schedule', selectSchedule)
-router.post('/schedule', ensureLoggedIn(), createSchedule)
-router.delete('/schedule', ensureLoggedIn(), removeSchedule)
-*/
+router.get('/is-member', roomExistMiddleware, userIsRoomMemberMiddleware, isMember)
+router.get('/members', roomExistMiddleware, listMembers)
+router.post('/members', ensureLoggedIn(), roomExistMiddleware, userIsNotRoomMemberMiddleware, addMember)
+router.delete('/members', ensureLoggedIn(), roomExistMiddleware, userIsRoomMemberMiddleware, userIsNotRoomOwnerMiddleware, removeMember)
+router.get('/announcements', roomExistMiddleware, listAnnouncements)
+router.post('/announcements', ensureLoggedIn(), roomExistMiddleware, userIsRoomMemberMiddleware, userIsRoomOwnerMiddleware, addAnnouncement)
+router.delete('/announcements', ensureLoggedIn(), roomExistMiddleware, userIsRoomMemberMiddleware, userIsRoomOwnerMiddleware, removeAnnouncement)
+router.get('/schedule', roomExistMiddleware, listSchedules)
+router.post('/schedule', ensureLoggedIn(), roomExistMiddleware, userIsRoomMemberMiddleware, userIsRoomOwnerMiddleware, addSchedule)
+router.delete('/schedule', ensureLoggedIn(), roomExistMiddleware, userIsRoomMemberMiddleware, userIsRoomOwnerMiddleware, removeSchedule)
+
 module.exports = router
